refactor: typos & quantum pdf

--- a/coding.html
+++ b/coding.html
@@ -28,7 +28,7 @@
         <div class="container">
             <h1>Code Projects</h1>
 
-            <h5>Sprint Timer | <em>Embedded Python, PCB design</em> | <a target="_blank" href="sprint-timer/index.html">Product Website</a></h5>
+            <h5>SprintBox | <em>Embedded Python, PCB design</em> | <a target="_blank" href="sprint-timer/index.html">Product Website</a></h5>
             <ul>
               <li>Timer that allows athletes to get millisecond-precise times while running</li>
               <li>Embedded programming that involves timing across a distributed system</li>
@@ -47,7 +47,7 @@ Aerosol Injections | <em>PyTorch</em> | <a target="_blank" href="papers/sai_ssl_
               <li>Search engine for the Project Gutenberg library with a sharded database to rapidly handle queries; deployed on AWS EC2 nodes</li>
             </ul>
 
-            <h5>An Introduction to Quantum Computing | <em>Python, Qiskit</em> | <a target="_blank" href="https://drive.google.com/file/d/133497IIniO4rrsxoizD9gzUPon1xj0h8/view?usp=sharing">Paper</a> | <a target="_blank" href="https://colab.research.google.com/drive/1pjp4IYr9yRQqdHSF53U3fJIaZzqBvpro?usp=sharing">Code</a></h5>
+            <h5>An Introduction to Quantum Computing | <em>Python, Qiskit</em> | <a target="_blank" href="papers/intro_to_quantum_computing.pdf">Paper</a> | <a target="_blank" href="https://colab.research.google.com/drive/1pjp4IYr9yRQqdHSF53U3fJIaZzqBvpro?usp=sharing">Code</a></h5>
             <ul>
               <li>An exploration of quantum computing that teaches the reader the basics, including requisite linear algebra and quantum mechanics</li>
               <li>Implements Grover's algorithm for unstructured search and deploys the code on IBM's quantum computers through their API</li>
