--- a/sprint-timer/index.html
+++ b/sprint-timer/index.html
@@ -75,8 +75,8 @@
     
     <section id="what-is-it" class="container my-5 text-center">
         <h2 class="fw-bold mb-4">What is SprintBox</h2>
-        <p>SprintBox is designed primarily for short distance track & field athletes. However, it can be used by athletes of any sport. While stopwatches typically differ by 0.24s from Fully Automatic Timing that you see at meets, research shows that human variability means the real results can be anywhere from 0.07s to 0.31s off!</p>
-        <p>SprintBox gives you millisecond-precise measurements that you can use to fine-tine your training, get seed times for meets, or even get your 40y dash time if you're a football athlete looking to make it to the next level.</p>
+        <p>SprintBox is designed primarily for short distance track & field athletes. However, it can be used by athletes of any sport. Stopwatches are considered to already be incorrect by 0.24s relative to Fully Automatic Timing rigs used at meets, though worse, research shows that human reaction speeds are highly variable.</p>
+        <p>SprintBox gives you millisecond-precise measurements that you can use to fine-tune your training, get seed times for meets, or even get your 40y dash time if you're a football athlete looking to make it to the next level.</p>
     </section>
 
     <section id="how" class="content-section text-center">
@@ -90,7 +90,7 @@
                 </div>
                 <div class="carousel-item">
                     <h3 class="text-white">Starting a Race</h3>
-                    <img src="photos/starting_race.JPG" class="d-block w-100 rounded shadow" alt="Sprinting athlete pressing the start botton on the starting device (white box).">
+                    <img src="photos/starting_race.JPG" class="d-block w-100 rounded shadow" alt="Sprinting athlete pressing the start button on the starting device (white box).">
                 </div>
                 <div class="carousel-item">
                     <h3 class="text-white">Out the Blocks</h3>
