--- a/coding.html
+++ b/coding.html
@@ -122,6 +122,6 @@ Aerosol Injections | <em>PyTorch</em> | <a target="_blank" href="papers/sai_ssl_
     </main>
   </body>
   <footer class="border-top">
-    <p class="text-muted text-center">© 2024 Nick Masi</p>
+    <p class="text-muted text-center">© 2024—2025 Nick Masi</p>
   </footer>
 </html>
