--- a/visual.html
+++ b/visual.html
@@ -30,6 +30,17 @@
 
           <div class="row g-0 visual">
             <div class="col-12 col-md-6">
+              <a href="relief/index.html">
+                <img src="relief/images/sfno_loss_by_cell.png" class="mr-3 float-left header-image"/>
+              </a>
+            </div>
+            <div class="col-12 col-md-6 header-text">
+                <p>ReLIEF: Revealing Learned Inequitable Earth Forecasts. Research conducted as part of my master's thesis at Brown. <a href="relief/index.html">Data narrative</a> written for DATA 1500 at Brown.</p>
+            </div>
+          </div>
+
+          <div class="row g-0 visual">
+            <div class="col-12 col-md-6">
                 <img src="images/Providence_Carfree.png" class="mr-3 float-left header-image"/>
             </div>
             <div class="col-12 col-md-6 header-text">
@@ -60,6 +71,6 @@
     </main>
   </body>
   <footer class="border-top">
-    <p class="text-muted text-center">© 2024 Nick Masi</p>
+    <p class="text-muted text-center">© 2024—2025 Nick Masi</p>
   </footer>
 </html>
