--- a/writing.html
+++ b/writing.html
@@ -50,6 +50,6 @@
     </main>
   </body>
   <footer class="border-top">
-    <p class="text-muted text-center">© 2024 Nick Masi</p>
+    <p class="text-muted text-center">© 2024—2025 Nick Masi</p>
   </footer>
 </html>
