feat: ReLIEF title

--- a/visual.html
+++ b/visual.html
@@ -30,7 +30,7 @@
 
           <div class="row g-0 visual">
             <div class="col-12 col-md-6">
-              <a href="relief/index.html">
+              <a href="relief/">
                 <img src="relief/images/sfno_loss_by_cell.png" class="mr-3 float-left header-image"/>
               </a>
             </div>
