--- a/coding.html
+++ b/coding.html
@@ -28,7 +28,7 @@
         <div class="container">
             <h1>Code Projects</h1>
 
-            <h5>SprintBox | <em>Embedded Python, PCB design</em> | <a target="_blank" href="sprint-timer/index.html">Product Website</a></h5>
+            <h5>SprintBox | <em>Embedded Python, PCB design</em> | <a target="_blank" href="sprintbox/">Product Website</a></h5>
             <ul>
               <li>Timer that allows athletes to get millisecond-precise times while running</li>
               <li>Embedded programming that involves timing across a distributed system</li>
