--- a/visual.html
+++ b/visual.html
@@ -30,12 +30,12 @@
 
           <div class="row g-0 visual">
             <div class="col-12 col-md-6">
-              <a href="relief/">
-                <img src="relief/images/sfno_loss_by_cell.png" class="mr-3 float-left header-image"/>
+              <a href="safe/">
+                <img src="safe/images/temp_map.png" class="mr-3 float-left header-image"/>
               </a>
             </div>
             <div class="col-12 col-md-6 header-text">
-                <p>ReLIEF: Revealing Learned Inequitable Earth Forecasts. Research conducted as part of my master's thesis at Brown. <a href="relief/index.html">Data narrative</a> written for DATA 1500 at Brown.</p>
+                <p>SAFE: Investigating AI Weather Forecasting Models with Stratified Assessments of Forecasts over Earth. Research conducted as part of my master's thesis at Brown. <a href="safe/">Data narrative</a> written for DATA 1500 at Brown.</p>
             </div>
           </div>
 
