--- a/safe/practice.html
+++ b/safe/practice.html
@@ -6,6 +6,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+        <script src="https://d3js.org/d3.v4.min.js"></script>
     </head>
     <body>
         <h1>ReLIEF: Revealing Learned Inequitable Earth Forecasts</h1>
@@ -17,9 +18,13 @@
         <img class="wide-img" src="images/sfno_loss_by_cell.png">
         <p>ML models used for climate or weather predictions are typically assessed on spatially averaged loss metrics.</p>
         <div class="divider"></div>
+        <div id="myTooltip"></div>
+        <div id="myChart""></div>
+        <div class="divider"></div>
         <h2>About this story</h2>
-        <p>Here's a <a href="../index.html" target="_blank">link</a>.</p>
+        <p>About the <a href="../">author</a>.</p>
     </body>
+    <script src="scripts/scatter.js"></script>
     <footer class="border-top">
         <p class="text-muted text-center">© 2025 Nick Masi</p>
     </footer>
