feat: data narrative

--- a/visual.html
+++ b/visual.html
@@ -31,7 +31,7 @@
           <div class="row g-0 visual">
             <div class="col-12 col-md-6">
               <a href="safe/">
-                <img src="safe/images/temp_map.png" class="mr-3 float-left header-image"/>
+                <img src="safe/images/dist.png" class="mr-3 float-left header-image"/>
               </a>
             </div>
             <div class="col-12 col-md-6 header-text">
