post-graduation updates

--- a/coding.html
+++ b/coding.html
@@ -98,6 +98,14 @@ Aerosol Injections | <em>PyTorch</em> | <a target="_blank" href="papers/sai_ssl_
             </ul>
 
             <h2 style="margin-top: 40px;">Open Source Contributions</h2>
+
+            <h5>pygeoboundaries | <a target="_blank" href="https://github.com/ibhalin/pygeoboundaries">Repo</a></h5>
+            <ul>
+              <li>Python package for accessing political border information and other territory metadata via W&M's geoBoundaries database</li>
+              <li>Added support for returning GeoDataFrames and for getting territory metadata beyond just borders</li>
+              <li>Reformated the repo to be a pip-installable package</li>
+              <li>Added tests and filled some missing data</li>
+            </ul>
             
             <h5>Folktables | <a target="_blank" href="https://github.com/socialfoundations/folktables">Repo</a></h5>
             <ul>
