--- a/index.html
+++ b/index.html
@@ -43,12 +43,23 @@
                         </a>
                     </h1>
                     <br/>
-                    <p>
-                        <i class="bi bi-book bullet-icon"></i>BS/MS student in <b>Computer Science</b> at Brown University <br>
-                        <i class="bi bi-book bullet-icon"></i>BA student in <b>International & Public Affairs</b> at Brown University <br>
-                        <i class="bi bi-book bullet-icon"></i><em>Expected graduation for all degrees: May 2025</em>
-                    </p>
                     <p>Contact: nicholas [underscore] masi [at] brown [dot] edu</p>
+                    <p>
+                        <h5><i class="bi bi-book-fill bullet-icon" style="color: #4E3629"></i> Brown University</h5>
+                        Sc.M. in Computer Science
+                        <ul style="margin: 0 0 5px 0">
+                            <li>Thesis: <em>SAFE: Benchmarking AI Weather Prediction Fairness with Stratified Assessments of Fairness over Earth</em></li>
+                        </ul>
+                        Sc.B. in Computer Science
+                        <ul style="margin: 0 0 5px 0">
+                            <li style="margin-bottom: -5px;">Senior Prize in CS</li>
+                            <li><em>magna cum laude</em></li>
+                        </ul>
+                        A.B. in International and Public Affairs (Policy and Governance track)
+                        <ul style="margin: 0 0 5px 0">
+                            <li><em>magna cum laude</em></li>
+                        </ul>
+                    </p>
                 </div>
             </div>
 
@@ -209,7 +220,7 @@
                                     <li>Develop and maintain <a target="_blank" href="https://www.wbru.com/">website</a></li>
                                 </ul>
                             </p>
-                            <p class="card-text"><small class="text-muted">September 2023 — Present</small></p>
+                            <p class="card-text"><small class="text-muted">September 2023 — May 2025</small></p>
                         </div>
                     </div>
                 </div>
@@ -223,7 +234,7 @@
                                     <li>Run & plan meetings; organize club logistics</li>
                                 </ul>
                             </p>
-                            <p class="card-text"><small class="text-muted">September 2023 — Present</small></p>
+                            <p class="card-text"><small class="text-muted">September 2023 — May 2025</small></p>
                         </div>
                     </div>
                 </div>
@@ -245,6 +256,15 @@
 
             <h3 class="mb4" style="margin-bottom: 20px;">Awards</h3>
             <div class="row">
+                <div class="col-md-4">
+                    <div class="card work-experience-card">
+                        <div class="card-body">
+                            <h5 class="card-title">Senior Prize in Computer Science</h5>
+                            <p class="card-text">Awarded by the CS faculty for excellence in academics and excellence in service to the department</p>
+                            <p class="card-text"><small class="text-muted">May 2025</small></p>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-md-4">
                     <div class="card work-experience-card">
                         <div class="card-body">
