--- a/visual.html
+++ b/visual.html
@@ -12,7 +12,7 @@
     <script src="javascript/bootstrap.js" defer></script>
     <ul class="nav nav-pills justify-content-end">
         <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" role="button" aria-expanded="false">Projects</a>
