feat: safe map w/ territory outlines

--- a/safe/index.html
+++ b/safe/index.html
@@ -40,8 +40,8 @@
 
         <div class="map-container">
           <div id="map"></div>
-          <script src="scripts/carto-basemap.js"></script>
-          Basemap data from OpenStreetMap with styling from CARTO.
+          <script src="scripts/strata-map.js"></script>
+          Basemap data from OpenStreetMap with styling from CARTO. Administrative borders from geoBoundaries.
         </div>
         
         <div class="divider"></div>
@@ -131,6 +131,8 @@
           Thank you to <a href="https://www.reubenfb.com/" target="_blank">Professor Reuben Fischer-Baum</a> of <a href="https://data1500.github.io/" target="_blank">DATA 1500</a> at Brown.
           Thank you to Daniel Cai and Philip LaDuca for enlightening research discussion.
           Thank you to <a href="https://medium.com/@limeira.felipe94/highlighting-countries-on-a-map-with-maplibre-and-turf-js-61a6018be60e" target="_blank">Felipe Limeira</a> and <a href="https://medium.com/@dipakpatil2615/rendering-hundreds-of-thousands-of-polygons-using-js-because-gis-deserves-modern-visualization-e27d678dccca" target="_blank">Dipak Patil</a> for insightful cartography tutorials.
+          <br/><br/>
+          Administrative border data comes from <a href="https://www.geoboundaries.org/" target="_blank">geoBoundaries</a>.
           <br/><br/>
           SAFE's OSS repo is available <a target="_blank" href="https://github.com/N-Masi/safe">on GitHub</a>.
         </p>
