--- a/safe/index.html
+++ b/safe/index.html
@@ -134,7 +134,7 @@
           <br/><br/>
           Administrative border data comes from <a href="https://www.geoboundaries.org/" target="_blank">geoBoundaries</a>.
           <br/><br/>
-          SAFE's OSS repo is available <a target="_blank" href="https://github.com/N-Masi/safe">on GitHub</a>.
+          SAFE's OSS repo is available <a target="_blank" href="https://github.com/N-Masi/safe">on GitHub</a>. If you use SAFE, please cite its <a href="../papers/safe_masi.pdf" target="_blank">original paper</a>.
         </p>
         
     </body>
