safe site updates

--- a/coding.html
+++ b/coding.html
@@ -27,6 +27,11 @@
     <main class="flex-shrink-0" role="main">
         <div class="container">
             <h1>Code Projects</h1>
+            
+            <h5>SAFE | <a href="safe/">Website</a></h5>
+            <ul>
+              <li>Benchmark and Package for measuring the spatial disparity in AI weather prediction models</li>
+            </ul>
 
             <h5>SprintBox | <em>Embedded Python, PCB design</em> | <a target="_blank" href="sprintbox/">Product Website</a></h5>
             <ul>
