--- a/safe/territories.html
+++ b/safe/territories.html
@@ -40,8 +40,8 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" role="button" aria-expanded="false">Explore SAFE</a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item active" href="../safe">Benchmark</a></li>
-                        <li><a class="dropdown-item" href="../safe/territories.html">Territories</a></li>
+                        <li><a class="dropdown-item" href="../safe">Benchmark</a></li>
+                        <li><a class="dropdown-item active" href="../safe/territories.html">Territories</a></li>
                         <li><a class="dropdown-item" href="../safe/narrative.html">Narrative</a></li>
                     </ul>
                 </li>
@@ -50,8 +50,12 @@
 
         <div class="divider"></div>
 
-
-
+        <div class="map-container">
+          <div id="map"></div>
+          <script src="scripts/strata-map.js"></script>
+          Basemap data from OpenStreetMap with styling and hosting by CARTO. Administrative borders from geoBoundaries. Additional geometric functions from TurfJS.
+        </div>
+        
         <div class="divider"></div>
 
         <p class="text-ack">
