--- a/visual.html
+++ b/visual.html
@@ -30,12 +30,12 @@
 
           <div class="row g-0 visual">
             <div class="col-12 col-md-6">
-              <a href="safe/">
+              <a href="safe/narrative.html">
                 <img src="safe/images/dist.png" class="mr-3 float-left header-image"/>
               </a>
             </div>
             <div class="col-12 col-md-6 header-text">
-                <p>SAFE: Investigating AI Weather Forecasting Models with Stratified Assessments of Forecasts over Earth. Research conducted as part of my master's thesis at Brown. <a href="safe/">Data narrative</a> written for DATA 1500 at Brown.</p>
+                <p>SAFE: Investigating AI Weather Forecasting Models with Stratified Assessments of Forecasts over Earth. Research conducted as part of my master's thesis at Brown. <a href="safe/narrative.html">Data narrative</a> written for DATA 1500 at Brown.</p>
             </div>
           </div>
 
