--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         </a>
                     </h1>
                     <br/>
-                    <p>Contact: nicholas [underscore] masi [at] brown [dot] edu</p>
+                    <p>Contact: nicholas [underscore] masi [at] alumni [dot] brown [dot] edu</p>
                     <p>
                         <h5><i class="bi bi-book-fill bullet-icon" style="color: #4E3629"></i> Brown University</h5>
                         Sc.M. in Computer Science
@@ -66,6 +66,32 @@
             <div class="container mt-5">
                 <h3 class="mb-4">Experience</h3>
                 <ul class="timeline">
+                    <li class="timeline-item">
+                        <div class="timeline-item-content timeline-ta">
+                            <h5><i class="bi bi-lightbulb-fill" style="color: blueviolet;"></i>
+                                AI Policy Research Fellow</h5>
+                            <h6>Supervised Program in Alignment Research (SPAR)</h6>
+                            <p>
+                                <ul>
+                                    <li>Researching market incentives for responsible AI under Joël Christoph</li>
+                                </ul>
+                            </p>
+                            <p><small class="text-muted">September 2025 — Present</small></p>
+                        </div>
+                    </li>
+                    <li class="timeline-item">
+                        <div class="timeline-item-content  timeline-swe">
+                            <h5><i class="bi bi-terminal-fill" style="color: orange;"></i>
+                                Software Engineer</h5>
+                            <h6>MathWorks</h6>
+                            <p>
+                                <ul>
+                                    <li>Full time software engineer working on MATLAB and Simulink</li>
+                                </ul>
+                            </p>
+                            <p><small class="text-muted">September 2025 — Present</small></p>
+                        </div>
+                    </li>
                     <li class="timeline-item">
                         <div class="timeline-item-content timeline-ta">
                             <h5><i class="bi bi-lightbulb-fill" style="color: blueviolet;"></i>
