--- a/visual.html
+++ b/visual.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Nick Masi</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="css/bootstrap.css" rel="stylesheet"/>
     <link href="css/custom.css" rel="stylesheet"/>
   </head>
@@ -27,6 +28,17 @@
     <main class="flex-shrink-0" role="main">
       <div class="container">
           <h1>Visual Projects</h1>
+
+          <div class="row g-0 visual">
+            <div class="col-12 col-md-6">
+              <a target="_blank" href="https://github.com/N-Masi/mapping">
+                <img src="images/bar_density.png" class="mr-3 float-left header-image"/>
+              </a>
+            </div>
+            <div class="col-12 col-md-6 header-text">
+                <p>Repository of open source cartography projects I've done for fun <a target="_blank" href="https://github.com/N-Masi/mapping"><i class="bi bi-box-arrow-up-right"></i></a></p>
+            </div>
+          </div>
 
           <div class="row g-0 visual">
             <div class="col-12 col-md-6">
