feat: upload more papers

--- a/coding.html
+++ b/coding.html
@@ -46,7 +46,7 @@ Aerosol Injections | <em>PyTorch</em> | <a target="_blank" href="papers/sai_ssl_
               <li>Abstract: We develop a Spherical Fourier Neural Operator (SFNO) emulator for stratospheric aerosol injection (SAI) scenarios, leveraging the ARISE-SAI-1.5 dataset. By incorporating stratospheric aerosol optical depth as a forcing variable, our model captures key climate responses to SAI while maintaining long-term stability. We then show that predictions can be improved by pretraining the SFNO encoder on masked image modeling of climate data as a pretext task. These results indicate that SFNO-based emulators can effectively approximate computationally expensive climate simulations for geoengineering analyses.</li>
             </ul>
 
-            <h5>Distributed Search Engine | <em>NodeJs, AWS</em> | <a target="_blank" href="https://drive.google.com/file/d/1MFFw1YLeM0UYlFE-TtyBfXofljPef0kW/view?usp=sharing">Paper</a></h5>
+            <h5>Distributed Search Engine | <em>NodeJs, AWS</em> | <a target="_blank" href="papers/cs1380_GAS.pdf">Paper</a></h5>
             <ul>
               <li>Built a MapReduce distributed execution engine from scratch, then built a search engine on top of this</li>
               <li>Search engine for the Project Gutenberg library with a sharded database to rapidly handle queries; deployed on AWS EC2 nodes</li>
